fix(consent): error pa11y, passage du fond de la bannière en alt au lieu de contrast

--- a/src/component/consent/style/_scheme.scss
+++ b/src/component/consent/style/_scheme.scss
@@ -13,7 +13,7 @@
 
   #{ns(consent-banner)} {
     // @include color.background(contrast grey, (legacy:$legacy));
-    @include elevation.elevate(overlap-above, (legacy:$legacy, usage: contrast));
+    @include elevation.elevate(overlap-above, (legacy:$legacy, usage: alt));
     @include color.box-shadow(default grey, (legacy:$legacy));
   }
 
